links in header fixed. About me modified. Boxes to left of content modified. Heading1 made bigger and stretch into page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,12 @@ header {
     color: #ffffff;
 }
 
-header h1 {
-    display: inline-block;
+h1 {
+    display: block;
+    text-align: right;
+    width: 25%;
     font-size: 48px;
     background-color: #81898f;
-    margin-left: 50px;
 }
 
 
@@ -100,6 +101,8 @@ header ul li a:hover {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #81898f;
     color: #ffffff;
+    text-align: center;
+    font-size: 30px;
 }
 
 .headings {
@@ -111,12 +114,14 @@ header ul li a:hover {
     float: left;
     height: 300px;
     width: 275px;
-    margin-left: 25px;
+    margin-left: 50px;
     padding-right: 55px;
     color: white;
     border-right: white solid 7.5px;
-    text-align: right;
-    font-size: 65px;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .box2 {
